<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/AppColor"
            app:popupTheme="@style/AppTheme"
            app:contentInsetStart="0dp"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_98" >
                    <LinearLayout
                        android:id="@+id/ibtnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true">
                        <ImageView
                            android:id="@+id/img_ibtnBack"
                            android:layout_width="@dimen/px_70"
                            android:layout_height="@dimen/px_50"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:src="@mipmap/but_fh"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/img_ibtnBack"
                            android:text="@string/back_btn"
                            android:textSize="@dimen/textSize_18"
                            android:textColor="@color/TitelTextColor"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvToolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/text_size_18"
                        android:textColor="@color/TitelTextColor"
                        android:text="@string/worker_msg"/>

                    <ImageButton
                        android:id="@+id/ibtnSetting"
                        android:layout_width="@dimen/px_100"
                        android:layout_height="@dimen/px_100"
                        android:layout_alignParentRight="true"
                        android:visibility="gone"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/px_30"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/worker_name"
            android:textColor="@color/black"
            android:textSize="@dimen/px_26"/>
        <TextView
            android:id="@+id/tv_workerName"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/px_26"
            android:layout_marginLeft="@dimen/px_30"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_id"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"/>
            <TextView
                android:id="@+id/tv_workerID"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_30"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_sex"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"/>
            <TextView
                android:id="@+id/tv_workerSex"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_dep"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"/>
            <TextView
                android:id="@+id/tv_workerDep"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_phone"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"/>
            <TextView
                android:id="@+id/tv_workerPhone"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/px_26"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_class"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"/>
            <TextView
                android:id="@+id/tv_workerClass"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/px_26"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/worker_station"
            android:textColor="@color/black"
            android:textSize="@dimen/px_26"/>
        <TextView
            android:id="@+id/tv_workerStation"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/px_26"
            android:layout_marginLeft="@dimen/px_30"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/line">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/worker_QRCode"
                android:textSize="@dimen/px_26"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_workerQRCode"
                android:layout_width="@dimen/px_200"
                android:layout_height="@dimen/px_200"
                android:layout_marginLeft="@dimen/px_30"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>