<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/AppColor"
            app:popupTheme="@style/AppTheme"
            app:contentInsetStart="0dp"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_98" >
                    <LinearLayout
                        android:id="@+id/ibtnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true">
                        <ImageView
                            android:id="@+id/img_ibtnBack"
                            android:layout_width="@dimen/px_70"
                            android:layout_height="@dimen/px_50"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:src="@mipmap/but_fh"
                            android:background="@android:color/transparent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/img_ibtnBack"
                            android:text="@string/back_btn"
                            android:textSize="@dimen/textSize_18"
                            android:textColor="@color/TitelTextColor"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvToolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/text_size_18"
                        android:textColor="@color/TitelTextColor"
                        android:text="@string/transport_task"/>
                    <ImageButton
                        android:id="@+id/ibtnScan"
                        android:layout_width="@dimen/px_100"
                        android:layout_height="@dimen/px_100"
                        android:src="@mipmap/scans"
                        android:layout_toLeftOf="@+id/ibtnSearch"
                        android:background="@android:color/transparent"/>

                    <ImageButton
                        android:id="@+id/ibtnSearch"
                        android:layout_width="@dimen/px_100"
                        android:layout_height="@dimen/px_100"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/sousu"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_100"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvSearch"
                        android:layout_width="@dimen/px_100"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/search"
                        android:background="@drawable/bg_white_list_item"
                        android:textSize="@dimen/text_size_14" />
                    <View
                        android:layout_width="@dimen/px_1"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@id/tvSearch"
                        android:background="@color/colorLine"/>
                    <ImageView
                        android:id="@+id/ivSearch"
                        android:layout_width="@dimen/px_40"
                        android:layout_height="@dimen/px_40"
                        android:layout_marginLeft="@dimen/px_30"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/header_icon_search_gray"
                        android:layout_marginRight="@dimen/px_20"/>

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_55"
                        android:layout_toRightOf="@id/ivSearch"
                        android:layout_toLeftOf="@id/tvSearch"
                        android:layout_marginRight="@dimen/px_30"
                        android:hint="@string/search_hint"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/px_26"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:imeOptions="actionSearch"
                        android:background="@null"/>

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_1"
                    android:background="@color/colorLine"/>
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:tabBackground="@color/white"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabTextColor="@color/colorTabText"
                app:tabSelectedTextColor="@color/colorTabTextSelected"
                app:tabGravity="fill"
                app:tabMode="fixed">
            </android.support.design.widget.TabLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_2"
                android:background="@color/colorLine"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>