<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipToPadding="true">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/AppColor"
            app:popupTheme="@style/AppTheme"
            app:contentInsetStart="0dp"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px_98" >
                    <LinearLayout
                        android:id="@+id/ll_ibtnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/ibtnBack"
                        android:layout_width="@dimen/px_70"
                        android:layout_height="@dimen/px_50"
                        android:layout_alignParentLeft="true"
                        android:visibility="visible"
                        android:src="@mipmap/but_fh"
                        android:background="@android:color/transparent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toRightOf="@+id/ibtnBack"
                        android:text="@string/back_btn"
                        android:textSize="@dimen/textSize_18"
                        android:textColor="@color/TitelTextColor"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/ToolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/text_size_18"
                        android:textColor="@color/TitelTextColor"
                        android:text="@string/about"/>

                    <ImageButton
                        android:layout_width="@dimen/px_100"
                        android:layout_height="@dimen/px_100"
                        android:layout_alignParentRight="true"
                        android:visibility="gone"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/bk_gray">
        <ImageView
            android:id="@+id/img_versionLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/version_logo"/>
            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_versionLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/px_15"
                android:textSize="@dimen/px_26"
                android:text="版本号 1.0.0"
                />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

